# pascal

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TextInBuffer.cpp  TextInBuffer.h  build.sh  errors.cpp  errors.h  format.sh  lint.sh  main  main.c  parser.cpp  parser.h  pascal  pascal.cpp  pascal.sh  scanner.h  source_buffer.cpp  source_buffer.h  text_in_buffer.h  text_out_buffer.h  text_scanner.cpp  text_scanner.h  token.h
examples/: animate.pas  errors.in  short.pas  test.in  tokens.in  wolf.pas
include/: AbortCode.h  BufferedTextReader.h  Constants.h  Globals.h  SourceBuffer.h  functions.h
lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
scripts/: build.sh  run_tests.sh
src/: AbortCode.cpp  BufferedTextReader.cpp  CMakeLists.txt  Globals.cpp  SourceBuffer.cpp  common.cpp  common.h  compact_list_buffer.cpp  compact_list_buffer.h  eof_token.cpp  eof_token.h  error_token.cpp  error_token.h  errors.cpp  errors.h  functions.cpp  helpers.h  line_num_list.cpp  line_num_list.h  line_num_node.h  list_buffer.cpp  list_buffer.h  main.cpp  misc.h  number_token.cpp  number_token.h  parser.cpp  parser.h  pascal.cpp  scanner.h  source_buffer.cpp  special_token.cpp  special_token.h  string_token.cpp  string_token.h  symbol_table.cpp  symbol_table.h  symbol_table_node.cpp  symbol_table_node.h  symtab_node.cpp  (+15 more)
test/: CMakeLists.txt  main.cpp
test/src/: my_tests.cpp
tests/: test_example.cpp
